Смена версии на 0.1.2 dev

--- a/history.txt
+++ b/history.txt
@@ -1,6 +1,9 @@
 Bass Audio Source
 
+0.1.2 dev
+----------------------
 
-0.1.1.83 - 2022.06.22
+
+0.1.1.83 - 2022-06-22
 ----------------------
 The first release.
