--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,9 @@
 Bass Audio Source
 
+0.1.4 dev
+----------------------
+
+
 0.1.3.115 - 2022-10-28
 ----------------------
 Added update of tags when listening to radio broadcasts in Ogg format (Vorbis, FLAC, Opus).
