--- a/history.txt
+++ b/history.txt
@@ -2,7 +2,14 @@ Bass Audio Source
 
 0.1.4 dev
 ----------------------
-
+Added FLAC picture tag reading for local files.
+Added ability to read cover images from Ogg Vorbis and others.
+Updated BASS components:
+  bassdsd.dll  2.4.1.3;
+  basswv.dll   2.4.7.3;
+  bassflac.dll 2.4.5.2;
+  bassopus.dll 2.4.2.3.
+  
 
 0.1.3.115 - 2022-10-28
 ----------------------
