--- a/history.txt
+++ b/history.txt
@@ -1,16 +1,16 @@
 Bass Audio Source
 
-0.1.4 dev
+0.2.0.132 - 2023-05-11
 ----------------------
 Added FLAC picture tag reading for local files.
 Added ability to read cover images from Ogg Vorbis and others.
-Changed registry key name to work around "File Source (Async.)" connection issue when opening AVI files in GraphStudioNext.
 Updated BASS components:
   bassdsd.dll  2.4.1.3;
   basswv.dll   2.4.7.3;
   bassflac.dll 2.4.5.2;
   bassopus.dll 2.4.2.3.
-  
+Changed registry key name to work around "File Source (Async.)" connection issue when opening AVI files in GraphStudioNext.
+Versions 0.1.x.x are not recommended.
 
 0.1.3.115 - 2022-10-28
 ----------------------
