--- a/history.txt
+++ b/history.txt
@@ -2,6 +2,12 @@ Bass Audio Source
 
 0.2.1.x dev
 ----------------------
+Added information window.
+Opening network streams of known size has been accelerated.
+Removed "PreBufferMS" option.
+Updated BASS components:
+  bassopus.dll 2.4.2.4;
+  bassflac.dll 2.4.5.4.
 
 
 0.2.0.132 - 2023-05-11
@@ -15,6 +21,7 @@ Updated BASS components:
   bassopus.dll 2.4.2.3.
 Changed registry key name to work around "File Source (Async.)" connection issue when opening AVI files in GraphStudioNext.
 Versions 0.1.x.x are not recommended.
+
 
 0.1.3.115 - 2022-10-28
 ----------------------
