--- a/history.txt
+++ b/history.txt
@@ -2,7 +2,8 @@ Bass Audio Source
 
 0.3.0.x dev
 ----------------------
-Added support for playing MIDI files (.mid, .rmi). The user must specify the path to the SoundFont file (.sf2, .sfz) in the "MIDI_SoundFontDefault" setting.
+Added support for playing MIDI files (.midi, .mid, .rmi, .kar). The user must specify the path to the SoundFont file (.sf2, .sfz) in the "MIDI_SoundFontDefault" setting.
+Removed "BufferSizeMS" option.
 
 
 0.2.2.145 - 2023-12-17
