--- a/history.txt
+++ b/history.txt
@@ -8,7 +8,8 @@ Fixed a crash when going to the next URL.
 Fixed ignoring MP4 and WMA video files.
 Disabled the use of Media Foundation for URLs because navigation on MP4 files does not work.
 Updated BASS components:
-  basswv.dll 2.4.7.4.
+  basswv.dll 2.4.7.4;
+  bassape.dll 2.4.0.1.
 
 
 0.2.2.145 - 2023-12-17
