--- a/history.txt
+++ b/history.txt
@@ -9,7 +9,7 @@ Bass Audio Source
 Added support for playing MIDI files (.midi, .mid, .rmi, .kar). The user must specify the SoundFont file (.sf2, .sfz) in the filter settings panel. SoundFont files should be located in the BassAudioSource folder.
 Removed "BufferSizeMS" option.
 Fixed a crash when going to the next URL.
-Fixed ignoring MP4 and WMA video files.
+Fixed ignoring MP4 and WMV video files.
 Disabled the use of Media Foundation for URLs because navigation on MP4 files does not work.
 Disabled the use of Media Foundation for local files to prevent unwanted files from opening.
 Optimized loading of BASS components, which resulted in faster analysis of some files.
