--- a/history.txt
+++ b/history.txt
@@ -8,7 +8,7 @@ Fixed registration of a filter from a folder with Unicode characters.
 Added support for Matroska and WebM audio files.
 
 Updated BASS components:
-  bass.dll     2.4.17.41 beta;
+  bass.dll     2.4.18;
   bass_aac.dll 2.4.6.3 beta;
   bassmidi.dll 2.4.15.3;
   basswebm.dll 2.4.0.5 beta.
