--- a/history.txt
+++ b/history.txt
@@ -9,7 +9,7 @@ Added support for Matroska and WebM audio files.
 
 Updated BASS components:
   bass.dll     2.4.18;
-  bass_aac.dll 2.4.6.3 beta;
+  bass_aac.dll 2.4.7;
   bassmidi.dll 2.4.15.3;
   basswebm.dll 2.4.0.5 beta.
 
