--- a/history.txt
+++ b/history.txt
@@ -11,7 +11,7 @@ Updated BASS components:
   bass.dll     2.4.18;
   bass_aac.dll 2.4.7;
   bassmidi.dll 2.4.15.3;
-  basswebm.dll 2.4.1.
+  basswebm.dll 2.4.1.1 beta.
 
 
 0.3.1.192 - 2024-08-06
